# NiceGooey

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  FAILING_TESTS_PLAN.md  LICENSE  README.md  TODO.txt  main.py  mp3_encoder.py  pyproject.toml  pytest.ini  test_plan.md  tests_plan.md
.github/workflows/: pre-commit.yaml
.woodpecker/: prek.yaml  tox.yaml  typing.yaml
.woodpecker/workflows/: prek.yaml  tox.yaml  typing.yaml
examples/: mp3_encoder.py  widget_showcase.py
nice_gooey/argparse/: __init__.py  action.py  argument_parser_base.py  file_type.py  formatter.py  main.py
nicegooey/argparse/: __init__.py  action_ui.py  argument_parser.py  global_state.py  group_ui.py  main.py  patch.py  ui_util.py  util.py
tests/: conftest.py  smoke_test.py  test_basic_actions.py  test_bind.py  test_foo.py  test_groups.py  test_nargs.py  test_parse_quasar_theme_variables.py  test_submit.py  test_submit_exception.py  test_subparsers.py
tests/basic_actions/: test_action_with_type_validation.py  test_append_action_with_int.py  test_append_action_with_str.py  test_append_const_action.py  test_count_action.py  test_extend_action.py  test_float_action.py  test_int_action.py  test_store_const_action.py  test_store_const_action_required.py  test_store_false_action.py  test_store_true_action.py  test_string_action.py  test_string_action_with_choices.py  test_string_action_with_choices_const.py  test_string_action_with_choices_default.py  test_string_action_with_choices_fallback.py
tests/bind/: test_append_const_and_append_same_dest.py  test_binding_updates_all_fields.py  test_list_actions_with_same_dest_share_list.py  test_string_and_int_same_dest.py  test_two_store_actions_same_dest_last_wins.py
tests/config/: test_action_card_class.py  test_action_element_overrides.py  test_action_validation.py  test_append_const_enable_checkbox_default.py  test_display_help_expand_default.py  test_display_help_label.py  test_display_help_no_display.py  test_display_help_tooltip.py  test_display_name_override.py  test_ng_action_wrapper_config.py  test_ng_action_wrapper_set_nicegooey_config.py  test_number_precision_float.py  test_number_precision_int.py  test_number_precision_on_choices_raises.py  test_number_precision_on_non_numeric_raises.py  test_override_required_false.py  test_override_required_none_positional.py  test_override_required_true.py  test_override_type_renders_bool_input.py  test_override_type_renders_number_input.py  test_process_arguments_on_submit.py  test_process_arguments_on_submit_async.py  test_require_all_with_default.py  test_require_all_with_default_no_default.py  test_store_action_file.py  test_store_action_file_read_file_or_dir.py  test_store_action_file_write_mode.py  test_store_action_radio.py  test_store_action_slider.py  test_store_const_action_toggle.py  test_store_const_enable_checkbox_default.py  test_store_const_no_enable_checkbox_when_required.py
tests/integration/: uv.py  (+2 more)
(+125 files in other folders)
