[project]
name = "nicegooey"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
# TODO: upgrade nicegui to 3.9.0 when released
dependencies = [
    "nicegui",
]

[dependency-groups]
dev = [
    "pyrefly>=0.48.2",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.13",
    "selenium>=4.41.0",
]

[tool.ruff]
line-length = 110

[tool.tox]
requires = ["tox>=4.19"]
env_list = ["3.14t", "3.14", "3.13", "3.12", "type"]

[tool.tox.env_run_base]
description = "Run test under {base_python}"
commands = [["pytest"]]

[tool.tox.env.type]
description = "run type check on code base"
deps = ["mypy==1.18.2", "types-cachetools>=5.5.0.20240820", "types-chardet>=5.0.4.6"]
commands = [["mypy", "src{/}tox"], ["mypy", "tests"]]

[tool.uv.sources]
nicegui = { git = "https://github.com/zauberzeug/nicegui", rev="0eed6ac54d6379a593f7fb255653c2ce2ae569ff" }
