[project]
name = "nicegooey"
version = "1.0.0b1"
description = "Turn your Python CLI program into a modern web-based UI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nicegui>=3.9.0",
]

[project.urls]
sourcecode = "https://codeberg.org/atollk/NiceGooey/"
GitHub = "https://github.com/atollk/NiceGooey/"

[dependency-groups]
dev = [
    "pyrefly>=0.58.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.13",
    "selenium>=4.41.0",
]

[project.optional-dependencies]
native = [
    "pywebview[qt]>=6.1",
    "pygobject>=3.56.2",
]

[tool.ruff]
line-length = 110

[tool.pyrefly]
project_excludes = ["tests"]

[tool.tox]
requires = ["tox>=4.19"]
env_list = ["3.14", "3.13", "3.12"]

[tool.tox.gh-actions]
python = """
	3.12: py312
	3.13: py313
	3.14: py314
	"""

[tool.tox.env_run_base]
description = "Run test under {base_python}"
dependency_groups = ["dev"]
commands = [["python", "-m", "pytest"]]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-p nicegui.testing.plugin"
